--- a/src/components/styles/AboutUsSection.css
+++ b/src/components/styles/AboutUsSection.css
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 666px) {
   .about-section-container {
-    background-color: #292929;
+    background-color: white;
     display: grid;
     grid-template-rows: auto;
     justify-items: center;
@@ -11,7 +11,7 @@
     font-family: Bebas;
     font-size: 2.25rem;
     margin: 4%;
-    color: white;
+    color: #292929;
     margin-bottom: 0;
     text-align: center;
   }
@@ -22,7 +22,7 @@
     margin: 0;
     margin-left: 5%;
     margin-right: 5%;
-    color: white;
+    color: #292929;
     text-align: center;
   }
 
@@ -33,8 +33,8 @@
     margin-top: 5%;
     margin-bottom: 5%;
     background-color: transparent;
-    color: white;
-    border: solid 3px white;
+    color: #292929;
+    border: solid 3px #292929;
     text-decoration: none;
     padding-left: 2%;
     padding-right: 2%;
@@ -43,7 +43,7 @@
 
 @media only screen and (min-width: 666px) and (max-width: 920px) {
   .about-section-container {
-    background-color: #292929;
+    background-color: white;
     display: grid;
     grid-template-rows: auto;
     justify-items: center;
@@ -54,7 +54,7 @@
     font-family: Bebas;
     font-size: 2.25rem;
     margin: 2%;
-    color: white;
+    color: #292929;
     margin-bottom: 0;
     text-align: center;
   }
@@ -66,7 +66,7 @@
     margin-bottom: 2%;
     margin-left: 5%;
     margin-right: 5%;
-    color: white;
+    color: #292929;
     text-align: center;
   }
 
@@ -79,8 +79,8 @@
     margin-top: 6%;
     margin-bottom: 15%;
     background-color: transparent;
-    color: white;
-    border: solid 3px white;
+    color: #292929;
+    border: solid 3px #292929;
     margin: 0;
     margin-bottom: 2%;
   }
@@ -88,7 +88,7 @@
 
 @media only screen and (min-width: 921px) and (max-width: 1280px) {
   .about-section-container {
-    background-color: #292929;
+    background-color: white;
     display: grid;
     grid-template-rows: auto;
     justify-items: center;
@@ -99,7 +99,7 @@
     font-family: Bebas;
     font-size: 2.25rem;
     margin: 2%;
-    color: white;
+    color: #292929;
     margin-bottom: 0;
     text-align: center;
   }
@@ -111,7 +111,7 @@
     margin-bottom: 2%;
     margin-left: 5%;
     margin-right: 5%;
-    color: white;
+    color: #292929;
     text-align: center;
   }
 
@@ -124,8 +124,8 @@
     margin-top: 6%;
     margin-bottom: 15%;
     background-color: transparent;
-    color: white;
-    border: solid 3px white;
+    color: #292929;
+    border: solid 3px #292929;
     margin: 0;
     margin-bottom: 2%;
   }
@@ -133,7 +133,7 @@
 
 @media only screen and (min-width: 1280px) {
   .about-section-container {
-    background-color: #292929;
+    background-color: white;
     display: grid;
     grid-template-rows: auto;
     justify-items: center;
@@ -144,7 +144,7 @@
     font-family: Bebas;
     font-size: 2.25rem;
     margin: 2%;
-    color: white;
+    color: #292929;
     margin-bottom: 0;
     text-align: center;
   }
@@ -156,7 +156,7 @@
     margin-bottom: 2%;
     margin-left: 5%;
     margin-right: 5%;
-    color: white;
+    color: #292929;
     text-align: center;
   }
 
@@ -169,8 +169,8 @@
     margin-top: 6%;
     margin-bottom: 15%;
     background-color: transparent;
-    color: white;
-    border: solid 3px white;
+    color: #292929;
+    border: solid 3px #292929;
     margin: 0;
     margin-bottom: 2%;
   }
