--- a/src/components/styles/MainSection.css
+++ b/src/components/styles/MainSection.css
@@ -2,7 +2,7 @@
   .main-section-container {
     position: relative;
     margin: 0;
-    background-color: #292929;
+    background-color: white;
   }
 
   .main-section-bg {
@@ -64,7 +64,7 @@
   .main-section-container {
     position: relative;
     margin: 0;
-    background-color: #292929;
+    background-color: white;
   }
 
   .main-section-bg {
@@ -126,7 +126,7 @@
   .main-section-container {
     position: relative;
     margin: 0;
-    background-color: #292929;
+    background-color: white;
   }
 
   .main-section-bg {
@@ -210,18 +210,11 @@
     grid-template-rows: auto;
     justify-items: center;
     align-items: center;
-    background-color: white;
-  }
-
-  .main-section-over-title {
-    font-size: 1.5rem;
-    font-family: Barlow;
-    color: #8c8c8c;
-    font-weight: 1000;
+    background-color: #292929;
   }
 
   .main-section-title {
-    color: #292929;
+    color: white;
     text-align: center;
     font-size: 2.1rem;
     font-family: Bebas;
@@ -235,7 +228,7 @@
   }
 
   .main-section-description {
-    color: #292929;
+    color: white;
     text-align: left;
     font-size: 1.2rem;
     font-family: Barlow;
@@ -251,8 +244,8 @@
     font-family: Bebas;
     letter-spacing: 1px;
     background-color: transparent;
-    color: #292929;
-    border: solid 5px #292929;
+    color: white;
+    border: solid 5px white;
     width: 60%;
     text-align: center;
     text-decoration: none;
@@ -285,24 +278,15 @@
     grid-template-rows: auto;
     justify-items: center;
     align-items: center;
-    background-color: white;
-  }
-
-  .main-section-over-title {
-    font-size: 1.5rem;
-    font-family: Barlow;
-    color: #8c8c8c;
-    font-weight: 1000;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    background-color: #292929;
   }
 
   .main-section-title {
-    color: #292929;
+    color: white;
     text-align: center;
     font-size: 3rem;
     font-family: Bebas;
     font-weight: 1000;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     text-align: left;
     margin-top: 0;
     margin-bottom: 0;
@@ -312,7 +296,7 @@
   }
 
   .main-section-description {
-    color: #292929;
+    color: white;
     text-align: left;
     font-size: 1.25rem;
     font-family: Barlow;
@@ -322,13 +306,12 @@
   }
 
   .main-section-btn {
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 1.75rem;
     font-family: Bebas;
     letter-spacing: 1px;
     background-color: transparent;
-    color: #292929;
-    border: solid 5px #292929;
+    color: white;
+    border: solid 5px white;
     width: 60%;
     text-align: center;
     text-decoration: none;
@@ -361,24 +344,15 @@
     grid-template-rows: auto;
     justify-items: center;
     align-items: center;
-    background-color: white;
-  }
-
-  .main-section-over-title {
-    font-size: 1.75rem;
-    font-family: Barlow;
-    color: #8c8c8c;
-    font-weight: 1000;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    background-color: #292929;
   }
 
   .main-section-title {
-    color: #292929;
+    color: white;
     text-align: center;
     font-size: 3.2rem;
     font-family: Bebas;
     font-weight: 1000;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     text-align: left;
     margin-top: 0;
     margin-bottom: 0;
@@ -388,12 +362,11 @@
   }
 
   .main-section-description {
-    color: #292929;
+    color: white;
     text-align: left;
     font-size: 1.5rem;
     font-family: Barlow;
     font-weight: 1000;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     width: 90%;
     margin-top: 0;
   }
@@ -404,8 +377,8 @@
     font-family: Bebas;
     letter-spacing: 1px;
     background-color: transparent;
-    color: #292929;
-    border: solid 5px #292929;
+    color: white;
+    border: solid 5px white;
     width: fit-content;
     padding: 1%;
     text-align: center;
@@ -439,24 +412,15 @@
     grid-template-rows: 0.5fr 1fr 0.5fr;
     justify-items: center;
     align-items: center;
-    background-color: white;
-  }
-
-  .main-section-over-title {
-    font-size: 1.5rem;
-    font-family: Barlow;
-    color: #8c8c8c;
-    font-weight: 1000;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    background-color: #292929;
   }
 
   .main-section-title {
-    color: #292929;
+    color: white;
     text-align: center;
     font-size: 3rem;
     font-family: Bebas;
     font-weight: 1000;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     text-align: left;
     margin-bottom: 0;
     margin-right: 5%;
@@ -464,7 +428,7 @@
   }
 
   .main-section-description {
-    color: #292929;
+    color: white;
     text-align: left;
     font-size: 1.75rem;
     font-family: Barlow;
@@ -474,13 +438,12 @@
   }
 
   .main-section-btn {
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 3rem;
     font-family: Bebas;
     letter-spacing: 1px;
     background-color: transparent;
-    color: #292929;
-    border: solid 5px #292929;
+    color: white;
+    border: solid 5px white;
     width: 60%;
     text-align: center;
     text-decoration: none;
