--- a/src/components/styles/ProgramsSection.css
+++ b/src/components/styles/ProgramsSection.css
@@ -5,14 +5,14 @@
     justify-items: center;
     align-items: center;
     text-align: center;
-    background-color: white;
+    background-color: #292929;
   }
 
   .programs-section-title {
     font-family: Bebas;
     font-size: 2.5rem;
     margin: 5%;
-    color: #292929;
+    color: white;
     margin-bottom: 0;
   }
 
@@ -22,7 +22,7 @@
     margin: 0;
     margin-left: 5%;
     margin-right: 5%;
-    color: #292929;
+    color: white;
   }
 
   .programs-section-btn {
@@ -32,8 +32,8 @@
     margin-top: 5%;
     margin-bottom: 5%;
     background-color: transparent;
-    color: #292929;
-    border: solid 3px #292929;
+    color: white;
+    border: solid 3px white;
     text-decoration: none;
     padding-left: 2%;
     padding-right: 2%;
@@ -42,7 +42,7 @@
 
 @media only screen and (min-width: 666px) and (max-width: 920px) {
   .programs-section-container {
-    background-color: white;
+    background-color: #292929;
     display: grid;
     grid-template-rows: auto;
     justify-items: center;
@@ -53,7 +53,7 @@
     font-family: Bebas;
     font-size: 2.25rem;
     margin: 2%;
-    color: #292929;
+    color: white;
     margin-bottom: 0;
     text-align: center;
   }
@@ -65,7 +65,7 @@
     margin-bottom: 2%;
     margin-left: 5%;
     margin-right: 5%;
-    color: #292929;
+    color: white;
     text-align: center;
   }
 
@@ -78,8 +78,8 @@
     margin-top: 6%;
     margin-bottom: 15%;
     background-color: transparent;
-    color: #292929;
-    border: solid 3px #292929;
+    color: white;
+    border: solid 3px white;
     margin: 0;
     margin-bottom: 2%;
   }
@@ -87,7 +87,7 @@
 
 @media only screen and (min-width: 921px) and (max-width: 1280px) {
   .programs-section-container {
-    background-color: white;
+    background-color: #292929;
     display: grid;
     grid-template-rows: auto;
     justify-items: center;
@@ -98,7 +98,7 @@
     font-family: Bebas;
     font-size: 2.25rem;
     margin: 2%;
-    color: #292929;
+    color: white;
     margin-bottom: 0;
     text-align: center;
   }
@@ -110,7 +110,7 @@
     margin-bottom: 2%;
     margin-left: 5%;
     margin-right: 5%;
-    color: #292929;
+    color: white;
     text-align: center;
   }
 
@@ -123,8 +123,8 @@
     margin-top: 6%;
     margin-bottom: 15%;
     background-color: transparent;
-    color: #292929;
-    border: solid 3px #292929;
+    color: white;
+    border: solid 3px white;
     margin: 0;
     margin-bottom: 2%;
   }
@@ -137,14 +137,14 @@
     justify-items: center;
     align-items: center;
     text-align: center;
-    background-color: white;
+    background-color: #292929;
   }
 
   .programs-section-title {
     font-family: Bebas;
     font-size: 2.5rem;
     margin: 2%;
-    color: #292929;
+    color: white;
     margin-bottom: 0;
   }
 
@@ -154,7 +154,7 @@
     margin-bottom: 2%;
     margin-left: 5%;
     margin-right: 5%;
-    color: #292929;
+    color: white;
   }
 
   .programs-section-btn {
@@ -166,8 +166,8 @@
     margin-top: 6%;
     margin-bottom: 15%;
     background-color: transparent;
-    color: #292929;
-    border: solid 3px #292929;
+    color: white;
+    border: solid 3px white;
     margin: 0;
     margin-bottom: 2%;
   }
